<resources>
    <string name="app_name">WordCloud</string>
    <string name="example"> I cant believe they lost by 41
        An NBA team that won 65 games in the regular season, and went 33-1 when all their starters were on the court, just just lost a playoff game by 41 points.

        I mean
        You know the game is over when javale starts hitting turnaround fadeaway Js
        41 points.. 41 points!?!? How did Golden State beat Houston by an entire Lebron!?!
        I blinked and Warriors were up 40.
        Playing against Golden State is like fighting against your older brother, where they make you feel like its a fair fight until they roundhouse kick you in the throat.
        Narrative gonna swing so hard /r/NBA gonna get whiplash
        THE NBA HAS BEEN ELIMINATED FROM CHAMPIONSHIP CONTENTION.
        **Lets just copy and paste the post game thread from Game 1 and wrap this up.**
        CP3 still has never been to the Conference Finals
        I cant imagine how demoralizing it is to see Draymond Green start at center and get twice as many rebounds as your starting center.
        https://i.imgur.com/5XF0isW.jpg

        https://i.imgur.com/TDMosDg.jpg
        Dray with a quiet 19 rebounds tonight (according to google, ESPN says 17)
        About time Curry became the hunter instead of being the hunted
        So yeah that Skyscraper movie looks bad, lets talk about that
        Steph curry 1st half: injured,about to retire

        Steph curry 2nd half: the orbit
        I used to wonder if God would forgive us for what weve done to the NBA. Then I looked around and I realized God left this league a long time ago.
        Anyone else notice Quinn Cook balling in the 4th?
        When they do you like dat

        https://imgur.com/a/IK54QUX
        [After Currys third quarter](https://i.imgur.com/LrFVGNg.png)
        Game wasn’t as close as the score suggests
        Jordan Bell was +13 and never took a shot.

        That makes me smile for some reason.
        Guys, I think something might be wrong with Curry. He’s missing wide open shots and looks slower than usual…Nevermind third quarter happened.
        The takes here are so wild.

        Houston wins game 2: Steph Curry is overrated, Kevin Durant doesnt pass the ball at all.

        Golden State wins game 3: Warriors in 5. Playoff Harden strikes again.
        https://i.imgflip.com/2ao4xs.jpg
        the early reports of currys playoff demise have been greatly exaggerated
        wasnt it like a 10 point game at half?
        A New Steph

        The MCL Sprain Strikes Back

        Return Of The
        R/nba led me to believe Steph was gonna be a this whole series
        Lol @ people trashing Warriors fans for leaving early. They won by 40 bro.
        /r/nba when the Warriors are missing: Holy the Warriors are overrated.

        /r/nba when the Warriors are hitting: This league is
        North Korea has more reliable rockets than Houston.
        Curry went full Rorschach on Harden

        “I’m not here defending you, you’re here defending me”
        50/40/90 as a team

        Dray with 17 boards

        Steph at 56.5/41.6/100

        Quinn Cook 100/100/100

        Even JaVale and Zaza with +7

        This was a shellacking.
        Drawing out that foul for that easy 40 point lead
        **#DidntLoseBy50**
        3rd quarter Warriors strike again. What the man
        https://imgur.com/a/18zRpJV
        Shout out to Kevon Looney.
        i had this weird dream that my Celtics went through the same blowout recently, kinda odd right? hahahaha
        [\[Dread it.\]](https://i.imgur.com/Dyczxv6.png)
        [\[Run from it.\]](https://i.imgur.com/tKFnFj3.png)
        [\[The 3rd Quarter still arrives.\]](https://i.imgur.com/6Wf4lGw.png)
        SHAUN LIVINGSTON SON’D HARDEN
        All that for a drop of blood.
        Crazy how Steph’s knee healed exactly at halftime.
        Bro oracle looks so fun lol. Everyone dancing outside to Mac Dre.
        Harden should be ashamed of himself
        This is what I expect every Warriors game to go like tbh
        GSW was cruel to decide to coast during the regular season and let the Rockets take #1 spot. they actually believed their own hype
        #Steph: ALL Y’ALL

        out of his slump, Rockets
        To whoever is good at looking at basketball analytics and stat trends:

        Are blowouts going to be more common with the 3 point heavy NBA style? Cavs blew out Boston and vice versa, Rockets blew out Warriors and vice versa.
</string>

    <string name="words">Words</string>
    <string name="text_size_equation_hint_px">Text Equation(px)</string>
    <string name="skips">Skips</string>
    <string name="loading">Loading</string>
    <string name="show_words_loading">Show Words</string>
    <string name="circle">Circle</string>
    <string name="radius_hint_px">Radius(px)</string>
    <string name="text">text</string>
    <string name="others">others</string>
    <string name="clear">Clear</string>
</resources>
