<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView android:id="@+id/loading_title_textview"
              style="@style/AppTextViewTitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="16dp"
              android:text="@string/loading"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/show_words_loading_label_textview"
        style="@style/AppListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_words_loading"
        app:layout_constraintStart_toStartOf="@+id/loading_title_textview"
        app:layout_constraintTop_toBottomOf="@+id/loading_title_textview"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/loading_show_words_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/show_words_loading_label_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/show_words_loading_label_textview"/>

    <TextView
        android:id="@+id/circle_title_textview"
        style="@style/AppTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/circle"
        app:layout_constraintStart_toStartOf="@+id/loading_title_textview"
        app:layout_constraintTop_toBottomOf="@+id/show_words_loading_label_textview"/>

    <android.support.design.widget.TextInputLayout android:id="@+id/radius_text_input_layout"
                                                   style="@style/AppDefaultTextInputLayout"
                                                   android:layout_width="0dp"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginEnd="16dp"
                                                   android:layout_marginLeft="16dp"
                                                   android:layout_marginRight="16dp"
                                                   android:layout_marginStart="16dp"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/circle_title_textview">

        <android.support.design.widget.TextInputEditText android:id="@+id/radius_edittext"
                                                         style="@style/AppRadiusEditText"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:hint="@string/radius_hint_px"
                                                         android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/word_cloud_button"
        style="@style/AppWordCloudButton"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/cloud_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius_text_input_layout"/>

    <ImageView
        android:id="@+id/loading_icon_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/loading_show_words_switch"
        app:layout_constraintEnd_toStartOf="@+id/loading_show_words_switch"
        app:layout_constraintTop_toTopOf="@+id/loading_show_words_switch"
        app:srcCompat="@drawable/loading_no_show_words_icon"/>

    <ImageView
        android:id="@+id/radius_icon_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_title_textview"
        app:layout_constraintStart_toEndOf="@+id/circle_title_textview"
        app:layout_constraintTop_toTopOf="@+id/circle_title_textview"
        app:srcCompat="@drawable/radius_icon"/>

</android.support.constraint.ConstraintLayout>