<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.design.widget.TextInputLayout android:id="@+id/words_text_input_ayout"
                                                   style="@style/AppDefaultTextInputLayout"
                                                   android:layout_width="0dp"
                                                   android:layout_height="48dp"
                                                   android:layout_marginLeft="16dp"
                                                   android:layout_marginStart="16dp"
                                                   android:layout_marginTop="16dp"
                                                   android:layout_marginRight="16dp"
                                                   android:layout_marginEnd="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText android:id="@+id/words_edittext"
                                                         style="@style/AppTextDefaultEditText"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:paddingRight="44dp"
                                                         android:paddingEnd="44dp"
                                                         android:paddingLeft="16dp"
                                                         android:paddingStart="16dp"
                                                         android:background="@drawable/default_edittext_shape"
                                                         android:drawableLeft="@drawable/words_on_icon"
                                                         android:drawableStart="@drawable/words_on_icon"
                                                         android:hint="@string/words"/>
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/words_clear_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/clear_words_background"
        app:layout_constraintBottom_toBottomOf="@+id/words_text_input_ayout"
        app:layout_constraintEnd_toEndOf="@+id/words_text_input_ayout"
        app:layout_constraintTop_toTopOf="@+id/words_text_input_ayout" app:srcCompat="@drawable/clear_words_icon"/>

    <android.support.design.widget.TextInputLayout android:id="@+id/text_size_equation_text_input_layout"
                                                   style="@style/AppDefaultTextInputLayout"
                                                   android:layout_width="0dp"
                                                   android:layout_height="48dp"
                                                   android:layout_marginTop="8dp"
                                                   app:layout_constraintEnd_toEndOf="@id/words_text_input_ayout"
                                                   app:layout_constraintStart_toStartOf="@+id/words_text_input_ayout"
                                                   app:layout_constraintTop_toBottomOf="@+id/words_text_input_ayout">

        <android.support.design.widget.TextInputEditText android:id="@+id/text_size_equation"
                                                         style="@style/AppTextDefaultEditText"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:hint="@string/text_size_equation_hint_px"
                                                         android:drawableLeft="@drawable/text_size_equation_on_icon"
                                                         android:drawableStart="@drawable/text_size_equation_on_icon"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:id="@+id/radius_text_input_layout"
                                                   style="@style/AppDefaultTextInputLayout"
                                                   android:layout_width="0dp"
                                                   android:layout_height="48dp"
                                                   android:layout_marginTop="8dp"
                                                   app:layout_constraintEnd_toEndOf="@+id/text_size_equation_text_input_layout"
                                                   app:layout_constraintStart_toStartOf="@+id/text_size_equation_text_input_layout"
                                                   app:layout_constraintTop_toBottomOf="@+id/text_size_equation_text_input_layout">

        <android.support.design.widget.TextInputEditText android:id="@+id/skips_edittext"
                                                         style="@style/AppTextDefaultEditText"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="match_parent"
                                                         android:drawableLeft="@drawable/skips_on_icon"
                                                         android:drawableStart="@drawable/skips_on_icon"
                                                         android:hint="@string/skips"
                                                         android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>